# pyq

./: README.md  dev_quest.ipynb  main.py  pyproject.toml
dev/: dev.ipynb  dev_dash.py  dev_double_tree.ipynb  dev_networkx.ipynb  dev_quest.ipynb  dev_single_tree.ipynb
src/: __init__.py
src/pyq/questionnaire/: quetionnaire.py
src/pyq/similarity/: basic_similarity.py  partition_similarity.py
src/pyq/tree/: __init__.py  build_binary_tree.py  haar.py  tree.py  tree_node.py  visualization.py
src/pyq/utils/: scatter_3d.py
src/similarity/: __init__.py  basic_similarity.py
src/tree/: build_binary_tree.py
src/utils/: plot_binary_tree.py
