[project]
name = "pyq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diffusion-map @ file:///Users/haiy/git/quests/diffusion_map"
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "pip>=25.1.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
]
